--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@iconify/react": "^4.1.1",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -33,6 +34,7 @@
     "cookies-next": "^2.1.2",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "eventsource": "^2.0.2",
     "lucide-react": "^0.252.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
