--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/tailwindcss": "^0.2.0",
     "@iconify/react": "^4.1.1",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -25,6 +26,7 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-query": "^4.29.18",
     "@tanstack/react-table": "^8.9.3",
+    "@tremor/react": "^3.6.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -43,7 +45,6 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.0",
     "react-select": "^5.7.3",
-    "recharts": "^2.7.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
