--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@casl/ability": "^6.5.0",
+    "@casl/react": "^3.1.0",
     "@headlessui/tailwindcss": "^0.2.0",
     "@iconify/react": "^4.1.1",
     "@microsoft/fetch-event-source": "^2.0.1",
