--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-query": "^4.29.18",
     "@tanstack/react-table": "^8.9.3",
+    "@tanstack/react-virtual": "^3.0.0-alpha.0",
     "@tremor/react": "^3.6.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
