--- a/package.json
+++ b/package.json
@@ -1,56 +1,70 @@
 {
-  "name": "nextjs-13",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@casl/ability": "^6.5.0",
-    "@casl/react": "^3.1.0",
-    "@headlessui/tailwindcss": "^0.2.0",
-    "@iconify/react": "^4.1.1",
-    "@microsoft/fetch-event-source": "^2.0.1",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
-    "@radix-ui/react-hover-card": "^1.0.6",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-popover": "^1.0.6",
-    "@radix-ui/react-scroll-area": "^1.0.4",
-    "@radix-ui/react-select": "^1.2.2",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.4",
-    "@tanstack/react-query": "^4.29.18",
-    "@tanstack/react-table": "^8.9.3",
-    "@tanstack/react-virtual": "^3.0.0-alpha.0",
-    "@tremor/react": "^3.6.0",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-    "class-variance-authority": "^0.6.0",
-    "clsx": "^1.2.1",
-    "cookies-next": "^2.1.2",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
-    "eventsource": "^2.0.2",
-    "lucide-react": "^0.252.0",
-    "next": "13.4.7",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.0",
-    "react-select": "^5.7.3",
-    "tailwind-merge": "^1.13.2",
-    "tailwindcss": "3.3.2",
-    "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.3"
-  }
+   "name": "nextjs-13",
+   "version": "0.1.0",
+   "private": true,
+   "engines": {
+      "node": ">=14.0.0",
+      "yarn": ">=1.22.0",
+      "npm": "please-use-yarn"
+   },
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint",
+      "prettier": "prettier --write",
+      "prepare": "husky install"
+   },
+   "dependencies": {
+      "@casl/ability": "^6.5.0",
+      "@casl/react": "^3.1.0",
+      "@headlessui/tailwindcss": "^0.2.0",
+      "@iconify/react": "^4.1.1",
+      "@microsoft/fetch-event-source": "^2.0.1",
+      "@radix-ui/react-checkbox": "^1.0.4",
+      "@radix-ui/react-dialog": "^1.0.4",
+      "@radix-ui/react-dropdown-menu": "^2.0.5",
+      "@radix-ui/react-hover-card": "^1.0.6",
+      "@radix-ui/react-icons": "^1.3.0",
+      "@radix-ui/react-popover": "^1.0.6",
+      "@radix-ui/react-scroll-area": "^1.0.4",
+      "@radix-ui/react-select": "^1.2.2",
+      "@radix-ui/react-separator": "^1.0.3",
+      "@radix-ui/react-slot": "^1.0.2",
+      "@radix-ui/react-tabs": "^1.0.4",
+      "@radix-ui/react-toast": "^1.1.4",
+      "@tanstack/react-query": "^4.29.18",
+      "@tanstack/react-table": "^8.9.3",
+      "@tanstack/react-virtual": "^3.0.0-alpha.0",
+      "@tremor/react": "^3.6.0",
+      "@types/node": "20.3.1",
+      "@types/react": "18.2.14",
+      "@types/react-dom": "18.2.6",
+      "autoprefixer": "10.4.14",
+      "axios": "^1.4.0",
+      "class-variance-authority": "^0.6.0",
+      "clsx": "^1.2.1",
+      "cookies-next": "^2.1.2",
+      "eslint": "8.43.0",
+      "eslint-config-next": "13.4.7",
+      "eventsource": "^2.0.2",
+      "lucide-react": "^0.252.0",
+      "next": "13.4.7",
+      "postcss": "8.4.24",
+      "prop-types": "^15.6.0",
+      "react": "18.2.0",
+      "react-dom": "18.2.0",
+      "react-hook-form": "^7.45.0",
+      "react-select": "^5.7.3",
+      "tailwind-merge": "^1.13.2",
+      "tailwindcss": "3.3.2",
+      "tailwindcss-animate": "^1.0.6",
+      "typescript": "5.1.3"
+   },
+   "devDependencies": {
+      "@commitlint/cli": "^17.7.1",
+      "@commitlint/config-conventional": "^17.7.0",
+      "husky": "^8.0.3",
+      "prettier": "^3.0.1"
+   }
 }
