--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
       "build": "next build",
       "start": "next start",
       "lint": "next lint",
-      "prettier": "prettier --write",
+      "prettier": "prettier --write .",
       "prepare": "husky install"
    },
    "dependencies": {
