--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
       "@radix-ui/react-slot": "^1.0.2",
       "@radix-ui/react-tabs": "^1.0.4",
       "@radix-ui/react-toast": "^1.1.4",
+      "@radix-ui/react-tooltip": "^1.0.6",
       "@tanstack/react-query": "^4.29.18",
       "@tanstack/react-table": "^8.9.3",
       "@tanstack/react-virtual": "^3.0.0-alpha.0",
