--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
       "@radix-ui/react-toast": "^1.1.4",
       "@radix-ui/react-tooltip": "^1.0.6",
       "@tanstack/react-query": "^4.29.18",
+      "@tanstack/react-query-next-experimental": "^5.0.0-alpha.80",
       "@tanstack/react-table": "^8.9.3",
       "@tanstack/react-virtual": "^3.0.0-alpha.0",
       "@tremor/react": "^3.6.0",
