--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
       "@radix-ui/react-select": "^1.2.2",
       "@radix-ui/react-separator": "^1.0.3",
       "@radix-ui/react-slot": "^1.0.2",
+      "@radix-ui/react-switch": "^1.0.3",
       "@radix-ui/react-tabs": "^1.0.4",
       "@radix-ui/react-toast": "^1.1.4",
       "@radix-ui/react-tooltip": "^1.0.6",
@@ -52,12 +53,14 @@
       "eventsource": "^2.0.2",
       "lucide-react": "^0.252.0",
       "next": "13.4.7",
+      "next-themes": "^0.2.1",
       "postcss": "8.4.24",
       "prop-types": "^15.6.0",
       "react": "18.2.0",
       "react-dom": "18.2.0",
       "react-hook-form": "^7.45.0",
       "react-select": "^5.7.3",
+      "sharp": "^0.32.5",
       "tailwind-merge": "^1.13.2",
       "tailwindcss": "3.3.2",
       "tailwindcss-animate": "^1.0.6",
