--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
       "@types/node": "20.3.1",
       "@types/react": "18.2.14",
       "@types/react-dom": "18.2.6",
+      "@types/react-flatpickr": "^3.8.9",
       "autoprefixer": "10.4.14",
       "axios": "^1.4.0",
       "class-variance-authority": "^0.6.0",
@@ -51,25 +52,32 @@
       "eslint": "8.43.0",
       "eslint-config-next": "13.4.7",
       "eventsource": "^2.0.2",
+      "flatpickr": "^4.6.13",
+      "html5-qrcode": "^2.3.8",
       "lucide-react": "^0.252.0",
       "next": "13.4.7",
       "next-themes": "^0.2.1",
       "postcss": "8.4.24",
       "prop-types": "^15.6.0",
       "react": "18.2.0",
+      "react-currency-input-field": "^3.6.11",
       "react-dom": "18.2.0",
+      "react-flatpickr": "^3.10.13",
       "react-hook-form": "^7.45.0",
+      "react-qr-reader": "^3.0.0-beta-1",
       "react-select": "^5.7.3",
-      "sharp": "^0.32.5",
+      "sharp": "^0.32.6",
       "tailwind-merge": "^1.13.2",
       "tailwindcss": "3.3.2",
       "tailwindcss-animate": "^1.0.6",
-      "typescript": "5.1.3"
+      "typescript": "5.1.3",
+      "zustand": "^4.4.1"
    },
    "devDependencies": {
       "@commitlint/cli": "^17.7.1",
       "@commitlint/config-conventional": "^17.7.0",
       "husky": "^8.0.3",
-      "prettier": "^3.0.1"
+      "prettier": "^3.0.1",
+      "react-flatpickr": "^3.10.13"
    }
 }
