feat: add new feature shipment for driver

--- a/package.json
+++ b/package.json
@@ -44,27 +44,32 @@
       "@types/react": "18.2.14",
       "@types/react-dom": "18.2.6",
       "@types/react-flatpickr": "^3.8.9",
+      "@types/react-qr-reader": "^2.1.5",
+      "@yudiel/react-qr-scanner": "^1.1.10",
       "autoprefixer": "10.4.14",
       "axios": "^1.4.0",
       "class-variance-authority": "^0.6.0",
       "clsx": "^1.2.1",
       "cookies-next": "^2.1.2",
+      "date-fns": "^2.30.0",
       "eslint": "8.43.0",
       "eslint-config-next": "13.4.7",
       "eventsource": "^2.0.2",
       "flatpickr": "^4.6.13",
       "html5-qrcode": "^2.3.8",
       "lucide-react": "^0.252.0",
-      "next": "13.4.7",
+      "next": "^13.5.4",
       "next-themes": "^0.2.1",
       "postcss": "8.4.24",
       "prop-types": "^15.6.0",
-      "react": "18.2.0",
+      "react": "^18.2.0",
       "react-currency-input-field": "^3.6.11",
-      "react-dom": "18.2.0",
+      "react-day-picker": "^8.8.2",
+      "react-dom": "^18.2.0",
       "react-flatpickr": "^3.10.13",
       "react-hook-form": "^7.45.0",
-      "react-qr-reader": "^3.0.0-beta-1",
+      "react-qr-reader": "2.2.1",
+      "react-qr-scanner": "^1.0.0-alpha.7",
       "react-select": "^5.7.3",
       "sharp": "^0.32.6",
       "tailwind-merge": "^1.13.2",
