--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
       "tailwindcss": "3.3.2",
       "tailwindcss-animate": "^1.0.6",
       "typescript": "5.1.3",
+      "zod": "^3.22.4",
       "zustand": "^4.4.3"
    },
    "devDependencies": {
